--- a/config.json
+++ b/config.json
@@ -1,1 +1,14 @@
+{
+	"token": "MTExMTI1MjMyODAzNzc0ODc4Ng.GhemGl.MunIi10NQUqkL1oxjHxYC9OSzSQZPUuXeRYOsM",
 
+	"prefix": "/",
+	"clientId": "1111252328037748786",
+	"guildId": "1110700644152655885",
+
+	"host": "avalyn.xnitc.com",
+	"port": "1280",
+
+	"rpc_host": "rpc.xnitc.com",
+	"rpc_port": "1281"
+
+}
